--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,183 @@ box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
+
+
+
+
+
+
+
+/*
+  <**************** Halaman Login ******************>
+*/
+
+.form-error{
+  color: red;
+}
+
+/* Login */
+.logo {
+  margin-top:22px;
+}
+
+.logo h5{
+  margin-top:11px;
+  margin-bottom: 42px;
+  font-weight: bold;
+}
+
+.row-center{
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.button-space{
+  margin-top:20px;
+}
+
+.form-login{
+  width: 370px;
+}
+
+.form-login input{
+  height: 46px;
+  border-radius: 4px;
+}
+
+.form-login input[type=submit]{
+  box-shadow:0 2px 6px 0 rgba(0, 0, 0, 0.2);
+}
+
+.form-login input[type=button]:hover{
+  background: white;
+  color: #EE6F2C;
+}
+
+.login-footer{
+  margin-top:54px;
+  margin-bottom:24px;
+  font-size: 12px;
+}
+
+.btn-success {
+color: #fff;
+background-color: #DDB532;
+border-color: #DDB532;
+}
+
+.btn-success:hover {
+color: #fff;
+background-color: #333333;
+border-color: #333333;
+}
+
+.button:active{
+color: #fff;
+background-color: #DDB532;
+border-color: #DDB532;
+}
+
+/*
+  <**************** Halaman Registrasi ******************>
+*/
+
+.side-left{
+  background: rgb(0,111,177);
+  background: linear-gradient(107deg, rgba(0,111,177,1) 0%, rgba(82,163,212,1) 100%);
+
+}
+
+.logo .h4 {
+    margin-bottom: 24px;
+}
+
+
+.login-register{
+  margin-top:54px;
+  margin-bottom:117px;
+  text-align: center;
+  font-size: 12px;
+}
+
+
+.title-register{
+  margin:15px 0;
+}
+
+.title-register-1{
+  margin-bottom:8px;
+  font-size: 18px;
+  text-align: center;
+  font-weight: bolder;
+}
+
+.form-register{
+  width: 436px;
+}
+
+.form-register input{
+  height: 46px;
+  border-radius: 4px;
+}
+
+
+.btn-success.disabled, .btn-success:disabled{
+color: #fff;
+background-color: #DADADA;
+border-color: #DADADA;
+}
+
+.btn-success.disabled, .btn-success:disabled:hover{
+color: #fff;
+background-color: #DADADA;
+border-color: #DADADA;
+}
+
+.side-left-h1 {
+  margin: 50px 0 25px 40px;
+  text-align: left;
+}
+
+.side-left-h5 {
+  margin: 0 40px 32px 0;
+  text-align: right;
+}
+
+@media (min-width: 992px) {
+  .side-left{
+  background: rgb(0,111,177);
+  background: linear-gradient(180deg, rgba(0,111,177,1) 0%, rgba(82,163,212,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6affba', endColorstr='#2ed991',GradientType=0 ); /* IE6-9 */
+  top: 0;
+  left: 0;
+  position: fixed;
+  /* Preserve aspet ratio */
+  min-width: 50%;
+  min-height: 100%;
+  z-index: 1;
+  overflow-x: hidden;
+
+  }
+
+  .side-right{
+  background-color: black;
+  background: -moz-linear-gradient(top, #6affba 0%, #2ed991 100%) fixed; /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #6affba 0%,#2ed991 100%)fixed; /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #6affba 0%,#2ed991 100%) fixed; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6affba', endColorstr='#2ed991',GradientType=0 ); /* IE6-9 */
+  top: 0;
+  right: 0;
+  position: fixed;
+  /* Preserve aspet ratio */
+  min-width: 50%;
+  min-height: 100%;
+  z-index: 1;
+  overflow-x: hidden;
+
+  }
+}
+
 /*  Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
 
@@ -250,6 +427,10 @@ box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   .background-form .form-control{
     width: 87%;
   }
+
+
+
+
  }
 
 
@@ -297,6 +478,16 @@ box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-top:30px;
   }
 
+  .side-left-h1 {
+    margin: 50px 0 20px 0;
+    text-align: center;
+  }
+
+  .side-left-h5 {
+    margin: 0 0 32px 0;
+    text-align: center;
+  }
+
 }
 
 
@@ -334,6 +525,18 @@ box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  .lowongan-title{
    margin-top:30px;
  }
+
+ .side-left-h1 {
+   margin: 50px 0 20px 0;
+   text-align: center;
+ }
+
+ .side-left-h5 {
+   margin: 0 0 32px 0;
+   text-align: center;
+ }
+
+
 }
 
  /* Extra small devices (portrait phones, less than 576px) */
@@ -356,8 +559,7 @@ box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
      .bahasa-little-screen{
        display: block;
        text-align: center;
-
-     }
+ }
 
    /*jumbotron*/
    .background-form{
@@ -404,6 +606,17 @@ box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: none;
   }
 
+
+  .side-left-h1 {
+    margin: 50px 0 20px 0;
+    text-align: center;
+  }
+
+  .side-left-h5 {
+    margin: 0 0 32px 0;
+    text-align: center;
+  }
+
 }
 
 @media (max-width: 562px){
@@ -411,191 +624,4 @@ box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   .jumbotron-fluid .w-75{
     width: 100% !important;
   }
-}
-
-
-
-
-
-
-
-
-
-
-/*
-  <**************** Halaman Login ******************>
-*/
-
-
-
-.form-error{
-  color: red;
-}
-
-
-/* Login */
-.logo {
-  margin-top:25px;
-}
-
-.logo h5{
-  margin-top:11px;
-  margin-bottom: 42px;
-  font-weight: bold;
-}
-
-.row-center{
-  margin-left: 0px;
-  margin-right: 0px;
-}
-
-.button-space{
-  margin-top:32px;
-}
-
-.form-login{
-  width: 370px;
-}
-
-.form-login input{
-  height: 54px;
-  border-radius: 4px;
-}
-
-.form-login input[type=submit]{
-  box-shadow:0 2px 6px 0 rgba(0, 0, 0, 0.2);
-}
-
-.form-login input[type=button]:hover{
-  background: white;
-  color: #EE6F2C;
-}
-
-.login-footer{
-  margin-top:54px;
-  margin-bottom:24px;
-  font-size: 12px;
-}
-
-.btn-success {
-color: #fff;
-background-color: #DDB532;
-border-color: #DDB532;
-}
-
-.btn-success:hover {
-color: #fff;
-background-color: #333333;
-border-color: #333333;
-}
-
-.button:active{
-color: #fff;
-background-color: #DDB532;
-border-color: #DDB532;
-}
-
-/* Register */
-
-.side-left{
-background-color: #31DB93;
-background: -moz-linear-gradient(top, #6affba 0%, #2ed991 100%) fixed; /* FF3.6-15 */
-background: -webkit-linear-gradient(top, #6affba 0%,#2ed991 100%)fixed; /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, #6affba 0%,#2ed991 100%) fixed; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6affba', endColorstr='#2ed991',GradientType=0 ); /* IE6-9 */
-}
-
-.side-right{
-}
-
-
-.logo .h4 {
-    margin-bottom: 24px;
-}
-
-
-.login-register{
-  margin-top:54px;
-  margin-bottom:117px;
-  text-align: center;
-  font-size: 12px;
-}
-
-
-
-.title-register{
-  margin:32px 0;
-}
-
-.title-register-1{
-  margin-bottom:8px;
-  font-size: 14px;
-  text-align: center;
-}
-
-.title-register-2{
-  font-size: 12px;
-  text-align: center;
-  color: #AAAAAA;
-}
-
-
-.form-register{
-  width: 436px;
-}
-
-.form-register input{
-  height: 54px;
-  border-radius: 4px;
-}
-
-
-.btn-success.disabled, .btn-success:disabled{
-color: #fff;
-background-color: #DADADA;
-border-color: #DADADA;
-}
-
-.btn-success.disabled, .btn-success:disabled:hover{
-color: #fff;
-background-color: #DADADA;
-border-color: #DADADA;
-}
-
-@media (min-width: 992px) {
-  .side-left{
-  background-color: #31DB93;
-  background: -moz-linear-gradient(top, #6affba 0%, #2ed991 100%) fixed; /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #6affba 0%,#2ed991 100%)fixed; /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #6affba 0%,#2ed991 100%) fixed; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6affba', endColorstr='#2ed991',GradientType=0 ); /* IE6-9 */
-  top: 0;
-  left: 0;
-  position: fixed;
-  /* Preserve aspet ratio */
-  min-width: 50%;
-  min-height: 100%;
-  z-index: 1;
-  overflow-x: hidden;
-
-  }
-
-  .side-right{
-  background-color: black;
-  background: -moz-linear-gradient(top, #6affba 0%, #2ed991 100%) fixed; /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #6affba 0%,#2ed991 100%)fixed; /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #6affba 0%,#2ed991 100%) fixed; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6affba', endColorstr='#2ed991',GradientType=0 ); /* IE6-9 */
-  top: 0;
-  right: 0;
-  position: fixed;
-  /* Preserve aspet ratio */
-  min-width: 50%;
-  min-height: 100%;
-  z-index: 1;
-  overflow-x: hidden;
-
-  }
-
-
 }
